# aws-greengrass-lite

./: .clang-format  .clang-tidy  .clangd  .cmake-format.json  .cmake-format.yml  .cspell.json  .editorconfig  .gdbinit  .gitignore  .gitmodules  .sql-formatter.json  CMakeLists.txt  Containerfile  Makefile  README.md  RELEASE_NOTES.md  bootstrap-cmake.sh  c_api.cpp  common.cmake  coverity.json  dependencies.json  fc_deps.json  flake.nix  handle_table.cpp  handle_table.h  local_topics.cpp  local_topics.h  main.cpp  plugin_loader.cpp  plugin_loader.h  shared_struct.cpp  shared_struct.h  string_table.cpp  string_table.h  task.cpp  task.h  version
cloud-logger/: CMakeLists.txt  README.md  recipe.yml
cloud-logger/include/: cloud_logger.h
cloud-logger/src/: read_logs.c
gg_pal/: CMakeLists.txt
gg_pal/include/gg_pal/: env.hpp  process.hpp  startable.hpp
gg_pal/platform/linux/: CMakeLists.txt
gg_pal/platform/posix/: CMakeLists.txt
gg_pal/platform/stub/: CMakeLists.txt
hello-world-component/: CMakeLists.txt  README.md  recipe.yml
misc/: cmake_uninstall.cmake.in  db_to_json.sh  db_to_yaml.sh  dictionary.txt  gdb_pretty_print.py  iwyu_mappings.yml  pyproject.toml  run_nucleus  sample.yaml
misc/buildtestcontainer/: Containerfile  getty-override.conf
misc/buildtestcontainer_ubuntu22.04/: Containerfile
misc/container/: 01defaults.yaml  Containerfile  ggcore  greengrass.conf
misc/staticbuildtestcontainer/: Containerfile
misc/systemd/: greengrass-lite.target  greengrass_dir.conf.in  template.socket.in
nucleus/: CMakeLists.txt
nucleus/include/: nucleus_core.h  nucleus_core.hpp
nucleus/src/: CMakeLists.txt
nucleus/src/api/: api_error_trap.hpp  channel.cpp  data.cpp  error.cpp  logging.cpp  main.cpp  plugins.cpp  pubsub.cpp  tasks.cpp
nucleus/src/channel/: channel.cpp  channel.hpp
nucleus/src/config/: config_manager.cpp  config_manager.hpp  config_nodes.hpp  config_timestamp.hpp  json_deserializer.hpp  json_helper.cpp  json_helper.h  json_helper.hpp  publish_queue.cpp  publish_queue.h  publish_queue.hpp  tlog_json.cpp  tlog_json.hpp  transaction_log.cpp  transaction_log.h  transaction_log.hpp  update_behavior_tree.hpp  validator.hpp  watcher.h  watcher.hpp  yaml_config.cpp  yaml_config.hpp  yaml_deserializer.hpp  yaml_helper.cpp  yaml_helper.hpp  yaml_recipe.cpp  yaml_recipe.hpp
nucleus/src/conv/: json_conv.cpp  json_conv.hpp  serializable.hpp  yaml_conv.cpp  yaml_conv.hpp  yaml_serializer.cpp  yaml_serializer.hpp
nucleus/src/data/: data_util.hpp  environment.cpp  environment.h  environment.hpp  generic_serializer.cpp  generic_serializer.hpp  globals.h  globals.hpp  handle_table.cpp  handle_table.h  handle_table.hpp  object_model.hpp  safe_handle.cpp  safe_handle.hpp  serializable.cpp  serializable.hpp  shared_buffer.cpp  shared_buffer.h  shared_buffer.hpp  shared_list.cpp  shared_list.hpp  shared_queue.hpp  shared_struct.cpp  shared_struct.hpp  string_table.cpp  string_table.h  string_table.hpp  struct_model.cpp  struct_model.hpp  symbol_value_map.hpp  tracked_object.cpp  tracked_object.h  tracked_object.hpp  value_type.hpp
nucleus/src/deployment/: config_watchers.hpp  deployment_manager.cpp  deployment_manager.hpp  deployment_model.cpp  deployment_model.hpp  device_configuration.cpp  device_configuration.hpp  recipe_loader.cpp  (+2 more)
nucleus/stub/: main.c  main.cpp
nucleus/tests/: test_ggroot.hpp  test_tools.hpp
plugin_api/: CMakeLists.txt
plugin_api/include/: api_archive.hpp  api_callbacks.hpp  api_errors.hpp  api_forwards.hpp  api_logging.hpp  api_standard_errors.hpp  archive.hpp  atomic_shared.hpp  auto_release.hpp  buffer_stream.hpp  c_api.h  c_api.hpp  channel.hpp  checked_pointers.hpp  containers.hpp  cpp_api.hpp  error_tmpl.hpp  futures.hpp  greengrass_traits.hpp  handles.hpp  ipc_standard_errors.hpp  logging.hpp  lookup_table.hpp  plugin.hpp  ref_object.hpp  scopes.hpp  span.hpp  string_util.hpp  subscriptions.hpp  tasks_subscriptions.hpp  temp_module.hpp  util.hpp
plugins/: CMakeLists.txt
plugins/authorization_handler/: CMakeLists.txt
plugins/cli_server/: CMakeLists.txt  main.cpp
plugins/cloud_downloader/: CMakeLists.txt  main.cpp
plugins/device-sdk/: CMakeLists.txt
plugins/example_layered_plugin/: CMakeLists.txt  main.cpp
plugins/example_mqtt_sender/: CMakeLists.txt  main.cpp
plugins/example_plugin1/: CMakeLists.txt  main.cpp  version.script
plugins/example_plugin2/: CMakeLists.txt  main.cpp
plugins/fleet_provisioning/: CMakeLists.txt
plugins/fleet_status_service/: CMakeLists.txt
plugins/gen_component_loader/: CMakeLists.txt
plugins/iot_broker/: CMakeLists.txt  main.cpp
plugins/iot_jobs_handler/: CMakeLists.txt
plugins/ipc_server/: CMakeLists.txt  HeaderValue.hpp  ServerBootstrap.cpp  ServerBootstrap.hpp  main.cpp
plugins/lifecycle_ipc/: CMakeLists.txt
plugins/local_broker/: CMakeLists.txt  main.cpp
plugins/log_manager/: CMakeLists.txt  README.md
plugins/mqtt_status_bridge/: CMakeLists.txt
plugins/native_plugin/: CMakeLists.txt  main.cpp  startable.hpp
plugins/provision_plugin/: CMakeLists.txt  README.md  main.cpp
plugins/shared_resources/: CMakeLists.txt
plugins/tes_http_server_plugin/: CMakeLists.txt  main.cpp
sample-component/: CMakeLists.txt  README.md  main.cpp
sample-component/recipes/: com.example.SampleComponent-1.0.0.yaml
src/: CMakeLists.txt  main.cpp  old-main.cpp
src/layered-plugin/: CMakeLists.txt  layered_plugin.cpp
src/mqtt-plugin/: CMakeLists.txt  mqtt-plugin.cpp
src/nucleus-core/: CMakeLists.txt  c_api.cpp  config.cpp  config.h  config_manager.cpp  config_manager.h  config_reader.cpp  config_reader.h  environment.cpp  environment.h  globals.h  handle_table.cpp  handle_table.h  kernel_command_line.cpp  kernel_command_line.h  local_topics.cpp  local_topics.h  main_thread.cpp  plugin_loader.cpp  plugin_loader.h  shared_struct.cpp  shared_struct.h  task.cpp  task.h
src/sample-mqtt-user/: CMakeLists.txt  sample-mqtt-user.cpp
src/simple-plugin/: CMakeLists.txt
src/simple-plugin1/: CMakeLists.txt  simple_plugin1.cpp
src/simple-plugin2/: CMakeLists.txt  simple_plugin2.cpp
(+1334 files in other folders)
