[tool.poetry]
package-mode = false
name = ""

[tool.poetry.dependencies]
python = "^3.11"
python-lsp-server.version = "^1.11.0"
python-lsp-server.extras = ["mccabe", "pycodestyle", "pyflakes", "rope", "yapf"]
pyls-isort = "^0.2.2"
pylsp-mypy = "^0.6.8"
pyls-memestra = "^0.0.16"
pylsp-rope = "^0.1.16"
types-gdb = "^12.1.4.20240704"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
